--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,44 @@
         <h2>Introduction</h2>
         <p>I am a frontend developer with a focus on crafting user-friendly and visually appealing interfaces. With a strong passion for web development, I am constantly learning and experimenting with new technologies.</p>
     </section>
-    
+
+     <!-- New section for learners table -->
+
+     <div>
+        <h2>Learners Information</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <section id="projects">
         <h2>Projects</h2>
         
