--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,6 +34,43 @@
             <a href="#" target="_blank">Link to Project 1</a>
         </article>
         
+          <!-- جدول المعلومات حول المتعلمين -->
+          <div>
+            <h2>معلومات المتعلمين</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>الاسم</th>
+                        <th>العمر</th>
+                        <th>البلد</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>جون</td>
+                        <td>25</td>
+                        <td>الولايات المتحدة الأمريكية</td>
+                    </tr>
+                    <tr>
+                        <td>إميلي</td>
+                        <td>28</td>
+                        <td>كندا</td>
+                    </tr>
+                    <tr>
+                        <td>مايكل</td>
+                        <td>32</td>
+                        <td>أستراليا</td>
+                    </tr>
+                    <tr>
+                        <td>صوفيا</td>
+                        <td>21</td>
+                        <td>المملكة المتحدة</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+
         <article class="project">
             <h3>Project Title 2</h3>
             <p>Description of Project 2.</p>
