--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,37 +34,37 @@
             <a href="#" target="_blank">Link to Project 1</a>
         </article>
         
-          <!-- جدول المعلومات حول المتعلمين -->
-          <div>
-            <h2>معلومات المتعلمين</h2>
+           <!-- New section for learners table -->
+        <div>
+            <h2>Learners Information</h2>
             <table>
                 <thead>
                     <tr>
-                        <th>الاسم</th>
-                        <th>العمر</th>
-                        <th>البلد</th>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>جون</td>
+                        <td>John</td>
                         <td>25</td>
-                        <td>الولايات المتحدة الأمريكية</td>
+                        <td>USA</td>
                     </tr>
                     <tr>
-                        <td>إميلي</td>
+                        <td>Emily</td>
                         <td>28</td>
-                        <td>كندا</td>
+                        <td>Canada</td>
                     </tr>
                     <tr>
-                        <td>مايكل</td>
+                        <td>Michael</td>
                         <td>32</td>
-                        <td>أستراليا</td>
+                        <td>Australia</td>
                     </tr>
                     <tr>
-                        <td>صوفيا</td>
+                        <td>Sophia</td>
                         <td>21</td>
-                        <td>المملكة المتحدة</td>
+                        <td>UK</td>
                     </tr>
                 </tbody>
             </table>
