--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,5 +20,54 @@
     <a href="https://example.com">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
     </a>
+       <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <article>
+        <section>
+            <h2>About Me</h2>
+            <p>Here is some information about me...</p>
+        </section>
+        
+        <!-- New section for learners table -->
+        <div>
+            <h2>Learners Information</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+    </article>
+    <footer>
+        <p>&copy; 2024 Your Name</p>
+    </footer>
 </body>
 </html>
