--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tweets Page</title>
-</head>
-<body>
-    <h1>Tweets Page</h1>
-    
-    <!-- Embedding a tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Embedding tweets in HTML is easy with Twitter's official documentation! <a href="https://developer.twitter.com/en/docs/twitter-for-websites/embedded-tweets/overview" target="_blank">Learn more</a>.</p>
-        <!-- Replace the data-conversation-id with an actual tweet's data-conversation-id -->
-        <a href="https://twitter.com/TwitterDev/status/1234567890123456789"></a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    
-    <br>
-    <a href="index.html">Back to Homepage</a>
-</body>
+<html>
+  <head>
+    <title>
+      tweet html
+    </title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li>section 1</li>
+        <li>section 2</li>
+        <li>section 3</li>
+      </ul>
+      <a href="https://www.linkedin.com/in/khalid/">LINKEDIN PROFILE</a>
+    </header>
+    <main>
+
+      <article>
+        <h1>Embed tweet</h1>
+        <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/krk10YBSZ">pic.twitter.com/krk10YBSZ</a></p>&mdash; Andrew Tate (@Cobratate) <a href="https://twitter.com/Cobratate/status/1006888452645129?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a href="https://github.com/khalid/My_First_Portfolio/blob/985a68b487320b251f42a9dc/html_basic/index.html">BACK TO HOME PAGE</a>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      Made by khalid - <a href="https://www.linkedin.com/in/khalid/" target="_blank">here</a>
+    </footer>
+  </body>
 </html>
