--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -73,7 +73,7 @@
       </article>
     </main>
     <footer>
-      Made by aouam ossama - <a href="https://www.linkedin.com/in/oussamaaouam/" target="_blank">here</a>
+      Made by khalid - <a href="https://www.linkedin.com/in/khalid/" target="_blank">here</a>
     </footer>
   </body>
 </html> 
